# HW-dpcpp-2.1

./: CMakeLists.txt
include/: Text.hpp  main.hpp
src/: Text.cpp  main.cpp
